# whatsup

./: .gitignore  pyproject.toml  ruff.toml
whatsup/: __init__.py  db.py  main.py
whatsup/api/: __init__.py
whatsup/api/v1/: __init__.py  health.py  monitors.py
whatsup/migrations/: env.py
whatsup/migrations/versions/: 7f07fba1067a_initial_migration.py
whatsup/models/: monitors.py
whatsup/modules/: scheduler.py
whatsup_frontend/: index.html  package-lock.json  package.json
whatsup_frontend/src/: App.tsx
