[project]
name = "whatsup"
version = "0.1.0"
description = ""
authors = [
    {name = "0xChloe",email = "chloe@catastrophesoftware.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "uvicorn (>=0.48.0,<0.49.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "apscheduler (>=3.11.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
